--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -110,6 +110,7 @@ header.post-header {
 
 ul.post-list {
     width: 80%;
+    padding: 0;
     list-style-type: none;
 }
 
